namespaces/live.cloud-platform.service.justice.gov.uk/laa-landing-page-prd/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-landing-page-prd"
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-portal-stabilisation-tech"
    cloud-platform.justice.gov.uk/application: "The LAA Portal Landing Page is a user facing application for the LAA."
    cloud-platform.justice.gov.uk/owner: "laa-portal-stabilisation-tech: ben.ashton@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-landing-page.git"
    cloud-platform.justice.gov.uk/team-name: "laa-portal-stabilisation-tech"
    cloud-platform.justice.gov.uk/review-after: ""
